tests/ternary/invalid/malformed_ternary.amu
main :: () -> s32 {
    return if(1) 2 else 3 else 4;
}